2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * announce: Update for 1.4.0 release.
        * docs/Topics/WhatsNew.html: Mention setInterrupt API.

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * tcljava.m4 (AC_GCC_BUGS):
        Replace AC_TRY_COMPILE with AC_TRY_RUN so
        that program is compiled and run on host system.
	[Bug 1528278]

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tcl/lang/TJC.java: Fixup comments.
        * src/tjc/tjc/library/compileproc.tcl:
        Remove FIXME comments.
        * tests/tjc/compileproc_7.test: Test lappend
        to scoped variable name, this usage will
        not init a scoped var slot.

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Expression.java:
        Make expr pool default to 50 ExprValue objects.

2006-08-18  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen,
        * configure.in: Invoke new macro.
        * tcljava.m4 (AC_GCC_BUGS): Add new macro
	that attempts to detect a tricky bug known to
	exist in gcc 4.1.0. This optimizer bug causes
	failures when converting a long long back into
	a pointer. This logic is used to store a
	pointer to a C interp structure inside a jlong
	in the Java interp object.
	[Bug 1528278]

2006-08-05  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tcl/lang/TJCCompileCmd.java (TclCompile,
        isClassDefined):
        Add logic that detects the case where a Tcl proc
        with the same name is compiled more than once.
        This logic will generate a unique name so that
        a ClassLoader error because of a duplicate
        definition is avoided.
        * tests/tjc/tjcthread.test: Add test case
        for compilation of same proc in two different
        interpreters. Add test case for recompilation
        of Tcl proc with the same name.

2006-08-05  Mo DeJong  <mdejong@users.sourceforge.net>
