@@ -63,25 +63,56 @@
          </TABLE>
          <BR>
          <TABLE>
-            <TR>
+
+            <TR>            
                <TD VALIGN=top>
-                  <B>July 28, 2005:</B>&nbsp;
+                  <B>August 21, 2006:</B>&nbsp;
                </TD>
                <TD>
-                  New Tcl/Java 1.3.2 release!<BR>
+                  New Tcl/Java 1.4.0 release!<br>
+                  This release is <b>NOT</b> considered production
+                  ready, use 1.3.3 in production environments.
+                  <ul>
+                     <li>New TJC compiler for Jacl</li>
+                     <li>Itcl port for Jacl</li>
+                     <li>New <code>java::for</code> command</li>
+                     <li>Class loading improvements</li>
+                  </ul>
+               </TD>
+            </TR>
+
+            <TR>            
+               <TD VALIGN=top>
+                  <B>August 8, 2006:</B>&nbsp;
+               </TD>
+               <TD>
+                  New Tcl/Java 1.3.3 release!<br>
                   This release is considered stable
                   and is ready for use in production
                   environments.
-                  <UL>
-                     <LI>Tcl Blend works with Tcl 8.4.11.</LI>
-                     <LI>New Win32 BAT startup scripts.</LI>
-                     <LI>Fix build issues under Win32 and Unix.</LI>
-                     <LI>Fix build issues with JDK 1.4 and 1.5</LI>
-                     <LI>Fix JNI link error under Win32.</LI>
-                     <LI>Fix a bunch of minor bugs.</LI>
-                  </UL>
+                  <ul>
+                     <li>Fix exec deadlock in Jacl</li>
+                     <li>Fix default --prefix option</li>
+                     <li>Fix lsort -dictionary sort order</li>
+                     <li>Tcl Blend works with Tcl 8.4.13</li>
+                  </ul>
                </TD>
             </TR>
+
+            <TR>            
+               <TD VALIGN=top>
+                  <B>July 28, 2005:</B>&nbsp;
+               </TD>
+               <td>
+                  New Tcl/Java 1.3.2 release!<br>
+                  <ul>
+                     <li>Tcl Blend works with Tcl 8.4.11</li>
+                     <li>New Win32 BAT startup scripts</li>
+                     <li>Fixes a bunch of minor bugs</li>
+                  </ul>
+               </td>
+            </TR>
+
             <TR>
                <TD VALIGN=top>
                   <B>August 7, 2003:</B>&nbsp;
@@ -89,8 +120,8 @@
                <TD>
                   Tcl/Java 1.3.1 release!<BR>
                   <UL>
-                     <LI>Tcl Blend works with Tcl 8.4.4.</LI>
-                     <LI>Lots of bug fixes.</LI>
+                     <LI>Tcl Blend works with Tcl 8.4.4</LI>
+                     <LI>Lots of bug fixes</LI>
                   </UL>
                </TD>
             </TR>
@@ -101,9 +132,9 @@
                <TD>
                   Tcl/Java 1.3.0 release!<BR>
                   <UL>
-                     <LI>Includes lots of bug fixes.</LI>
-                     <LI>Includes many new features.</LI>
-                     <LI>New project website.</LI>
+                     <LI>Includes lots of bug fixes</LI>
+                     <LI>Includes many new features</LI>
+                     <LI>New project website</LI>
                   </UL>
                </TD>
             </TR>
